# eda_toolkit

./: .gitignore  LICENSE.md  Makefile  README.md  README_min.md  README_old.md  main.py  paper.bib  paper.md  pyproject.toml  python_script.py  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_lib.txt  setup.py  table1_categorical.md  table1_continuous.md  table1_summary_categorical.md  table1_summary_continuous.md
.github/: workflow.yml
.github/workflows/: workflow.yml
assets/: 3d_pdp.html
data_output/: census_summary_tables.xlsx
docs/: .buildinfo  .buildinfo.bak  acknowledgements.html  art.html  changelog.html  citations.html  contributors.html  data_management.html  eda_plots.html  genindex.html  getting_started.html  index.html  objects.inv  references.html  search.html  searchindex.js  theoretical_overview.html  usage_guide.html
docs/.doctrees/: acknowledgements.doctree  art.doctree  changelog.doctree  citations.doctree  contributors.doctree  data_management.doctree  eda_plots.doctree  environment.pickle  getting_started.doctree  index.doctree  references.doctree  theoretical_overview.doctree  usage_guide.doctree
docs/_sources/: art.rst.txt  changelog.rst.txt  citations.rst.txt  contributors.rst.txt  data_management.rst.txt  eda_plots.rst.txt  getting_started.rst.txt  index.rst.txt  references.rst.txt  theoretical_overview.rst.txt  usage_guide.rst.txt
docs/_static/: documentation_options.js
docs/docs/: citations.html  index.html  references.html
docs/v0.0.10/: .buildinfo  .buildinfo.bak  acknowledgements.html  changelog.html  citations.html  contributors.html  data_management.html  eda_plots.html  genindex.html  getting_started.html  index.html  references.html  search.html  searchindex.js
edatkit_311/: pyvenv.cfg
edatoolkit_venv374/: pyvenv.cfg
py_example_notebooks/: adult_income.ipynb  adult_income_data_management.ipynb  adult_income_eda.ipynb  custom_prefix_categorical_categorical.md  table1_categorical.md  table1_continuous.md  table1_summary.md  table1_summary_categorical.md  table1_summary_continuous.md
py_example_scripts/: adult_income.py  adult_income_data_management.py  adult_income_eda.py  dataframe_profiler_efficiency.py  detect_outliers.py  ecdf_plot_integration_in_data_doctor.py  examples_del_inactive_dataframes.py  group_by_imputer.py  table1_nans.py  table1_summary.md
source/: acknowledgements.rst  art.rst  changelog.rst  citations.rst  conf.py  data_management.rst  eda_plots.rst  getting_started.rst  index.rst  references.rst  theoretical_overview.rst  usage_guide.rst
src/: __init__.py
unittests/: test_art.py  test_data_manager.py  test_data_manager_utils.py  test_main.py  test_ml_eda.py  test_normality_tests.py  test_plot_utils.py  test_plots.py
(+455 files in other folders)
