[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda_toolkit"
version = "0.0.28a1"
description = "A Python library for EDA, including visualizations, directory management, data preprocessing, reporting, and more."
readme = { file = "README_min.md", content-type = "text/markdown" }
authors = [
    { name = "Leonid Shpaner, Oscar Gil", email = "lshpaner@ucla.edu" }
]

requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.0.0",
    "matplotlib>=3.5.3",
    "nbformat>=4.2.0,<=5.10.4",
    "numpy>=1.21.6,<=2.1.2",
    "pandas>=1.3.5,<=2.2.3",
    "plotly>=5.18.0,<=5.24.1",
    "scikit-learn>=1.0.2",
    "scipy>=1.7.3",
    "seaborn>=0.12.2,<=0.13.2",
    "tqdm>=4.66.4",
    "xlsxwriter==3.2.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# Correct place for URLs under [project.urls]
[project.urls]
"Documentation" = "https://datasciencedynamics.com/eda_toolkit_docs/"
"Source Code" = "https://github.com/lshpaner/eda_toolkit/"
"Leon Shpaner's Website" = "https://www.leonshpaner.com"
"Oscar Gil's Website" = "https://www.oscargildata.com"
"Zenodo Archive" = "https://zenodo.org/records/13162633"

[tool.setuptools.packages.find]
where = ["src"]
